--- a/sample/index.html
+++ b/sample/index.html
@@ -2,35 +2,24 @@
 <html>
 <head>
     <title>Circle Chart</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
+        *{margin:0;padding:0;}
+        body{padding:30px;}
         #donutTest {
-            position: absolute;
-            top: 50px;
-            left: 50px;
         }
 
         #donutTest .__donut {
-            /* 그림자 및 보더 추가 */
-            border: 1px solid rgba(0, 0, 0, 0.3);
-            box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
+            /*border: 1px solid rgba(0, 0, 0, 0.3);*/
+            /*box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);*/
         }
 
         #donutTest .__inner_circle {
-            /* 보더 추가 */
-            border: 1px solid rgba(0, 0, 0, 0.3);
+            /*border: 1px solid rgba(0, 0, 0, 0.3);*/
         }
 
-        #donutTest .__item {
-            -webkit-transition: all 0.2s linear;
-            transition: all 0.2s linear;
-        }
-
-        #donutTest .txt1 {
+        #donutTest .test_contents {
             font-size: 11px;
             font-family: sans-serif;
             line-height: 18px;
@@ -39,33 +28,70 @@
             transition: all 0.2s linear;
         }
 
-        #donutTest .txt2 {
-            font-size: 12px;
-            font-family: sans-serif;
-            line-height: 18px;
-            color: #ff0;
+        #donutTest .__item{
             -webkit-transition: all 0.2s linear;
             transition: all 0.2s linear;
         }
 
         #donutTest .on .__item {
-            /* 마우스 오버시에 영역 확대 */
-            width: 110% !important;
-            height: 110% !important;
+            width: 105% !important;
+            height: 105% !important;
         }
 
-        #donutTest .on .txt1 {
-            /* 마우스 오버시에 폰트사이즈 확대 */
+        #donutTest .on .test_contents {
             font-size: 18px !important;
         }
-        #donutTest .on .txt2 {
-            /* 마우스 오버시에 폰트사이즈 확대 */
-            font-size: 24px !important;
+        #donutTest .percent{
+            font-size: 11px;
+            font-family: sans-serif;
+            line-height: 18px;
+            color: #ff0;
+            -webkit-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+
+        }
+        #donutTest .on .percent {
+            font-size: 18px !important;
+        }
+        #donutTest .coin{
+            opacity:0;
+            color:#f2911b;
+            background-color:#fff;
+            border:1px solid #f2911b;
+            padding:7px 15px;
+            font-size:12px;
+            -webkit-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+        }
+        #donutTest .on .coin{
+            opacity:1;
+        }
+        #donutTest2{
+            margin-top:30px;
+        }
+        #donutTest2 .__donut{
+            box-shadow:2px 2px 10px rgba(0,0,0,0.5);
+        }
+        #donutTest2 .__inner_circle{
+            box-shadow:inset 2px 2px 5px rgba(0,0,0,0.2);
+        }
+        #donutTest2 .percent{
+            font-size:14px;
+            color:#fff;
+            line-height:19px;
+            font-family:sans-serif;
+            text-shadow:0 2px 5px rgba(0,0,0,1);
+            -webkit-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+        }
+        #donutTest2 .on .percent{
+            font-size:30px;
         }
     </style>
 </head>
 <body>
 <div id="donutTest"></div>
-<script src="circle_chart.js"></script>
+<div id="donutTest2"></div>
+<script src="/build/circle_chart.js"></script>
 </body>
 </html>
