--- a/sample/index.html
+++ b/sample/index.html
@@ -92,6 +92,6 @@
 <body>
 <div id="donutTest"></div>
 <div id="donutTest2"></div>
-<script src="/build/circle_chart.js"></script>
+<script src="circle_chart.js"></script>
 </body>
 </html>
